# nintendo-ds-framework

./: .gitignore  Backlog.txt  ClassGenerationSource.txt  ClassGenerationTemplate.txt  DSEngineCleanupToDo.txt  GameObjectTemplate.txt  GameSample.txt  LinkSample.txt  MemoryFlow.txt  Room2Sample.txt  RoomSample.txt  Todo.txt  ZeldaGameExample.txt  ZeldaGameLink.txt  ZeldaGameRoom.txt  datamap.txt
code/: .cproject  .project  Makefile  aRPiGi.nds  aRPiGi.sln  aRPiGi.vcxproj
code/aRPiGi_codelite/: Makefile  aRPiGi_codelite.project  aRPiGi_codelite.workspace
code/arm7/: Makefile  arm7.vcxproj  arm7.vcxproj.filters
code/arm9/: Makefile  arm9.vcxproj  arm9.vcxproj.filters
documentation/: BlenderExportSettings.txt
documentation/designs/: SceneEditorCameraRequirements.txt  SceneEditorRequirements.txt
documentation/doxygen/: Doxyfile
documentation/milestones/: DisplayListsForFasterRendering.nds  TextRenderingWithoutMajorPerformanceLoss.nds
gamedata/: link32x32_pal.bin.bak
graphics/: Thumbs.db
graphics/scenes/: newExportFormatExample.txt  scene.txt  scene2.txt  sceneCompleet.txt  sceneExportTest.txt  sceneGroot.txt  sceneGrootNewFormat.txt  shelltest.txt
graphics/sprites/: link.txt
misc/VisualStudio2008Solution/: aRPiGi.ncb  aRPiGi.sln  aRPiGi.vcproj
misc/backups/: Game_backup01-09-2010.cpp  Game_backup02-09-2010.cpp  Link.h  SpriteTest.cpp  SpriteTest.h  ZeldaSet.cpp  boomerang.c  boomerang.h  link.c
misc/backups/cmake_backup/: CMakeLists.txt  devkitARM.cmake  ndsmacros.cmake
misc/backups/cmake_backup/arm7/: CMakeLists.txt
tools/Ensata/: Readme.txt  (+1 more)
(+743 files in other folders)
